<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.auth.RegisterFragment">

    <TextView
        android:id="@+id/title_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:text="@string/signup_screen"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_your_best_email"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/email_layout"
        app:layout_constraintBottom_toTopOf="@id/email_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/title_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        app:startIconDrawable="@drawable/baseline_account_box_24"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:paddingStart="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_your_password"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/first_password_layout"
        app:layout_constraintBottom_toTopOf="@id/first_password_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:paddingStart="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retype_your_password"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/second_password_layout"
        app:layout_constraintBottom_toTopOf="@id/second_password_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/second_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/first_password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/second_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:paddingStart="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@id/second_password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
       android:layout_marginHorizontal="100dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/gray_dark" />


</androidx.constraintlayout.widget.ConstraintLayout>
