<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.auth.LoginFragment">

    <TextView
        android:id="@+id/title_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:text="@string/get_registered_now_to_save_your_evolution"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"/>

    <!-- Campo de entrada de e-mail -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/title_signin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        app:startIconDrawable="@drawable/baseline_account_box_24"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:paddingStart="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de entrada de senha -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="30dp"
        android:hint="**********"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:paddingStart="48dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botão de login -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/primary" />

    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:text="@string/by_continuing_you_agree_to_our_terms_of_use_and_privacy_policies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>
